--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
   crypto_font_icons: ^1.0.1
   font_awesome_flutter: ^10.1.0
-  provider: ^6.0.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -77,11 +76,20 @@ flutter:
         - asset: fonts/poppins_regular.ttf
         - asset: fonts/poppins_medium.ttf
         - asset: fonts/poppins_bold.ttf
+          weight: 700
 
 
     - family: Montserrat
       fonts:
         - asset: fonts/montserrat.ttf
+        - asset: fonts/montserrat_bold.ttf
+          weight: 700
+        - asset: fonts/montserrat_semibold.ttf
+          weight: 600
+    
+    - family: Sf
+      fonts:
+        - asset: fonts/sfns_display_regular.ttf
         
   #   - images/a_dot_ham.jpeg
 
